# dprint-plugin-json

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  dprint.json
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: ci.generated.yml  ci.ts  ci.yml  publish.generated.yml  publish.ts  publish.yml  release.yml
benches/: bench.rs
benches/data/: single_line_800kb.json
deployment/: schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  setup.js
examples/: bench.rs
scripts/: generateReleaseNotes.ts  generate_release_notes.ts
src/: format_text.rs  lib.rs  streaming.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  mod.rs  resolve_config.rs  types.rs
src/generation/: context.rs  generate.rs  mod.rs  token_finder.rs
src/parser/: context.rs  mod.rs  parse.rs  token_finder.rs
src/streaming/: mod.rs  printer.rs
tests/: test.rs
tests/specs/array/: Array_PreferSingleLine_True.txt
tests/specs/comments/: Comments_All.txt  Comments_BlankLineBeforeTrailing.txt  Comments_IgnoreNode_Custom.txt  Comments_IgnoreNode_Default.txt  Comments_PreservedBetweenTokens.txt
tests/specs/general/: Deno_All.txt  JsonC.txt  Json_All.txt  Json_BlankLines.txt  Jsonc_TrailingCommas_Always_Json.txt  Jsonc_TrailingCommas_Always_Jsonc.txt  Jsonc_TrailingCommas_Jsonc_Json.txt  Jsonc_TrailingCommas_Jsonc_Jsonc.txt  Jsonc_TrailingCommas_Maintain.txt  Jsonc_TrailingCommas_Never_Json.txt  Jsonc_TrailingCommas_Never_Jsonc.txt
tests/specs/numbers/: Numbers_All.txt
tests/specs/object/: Object_PreferSingleLine_True.txt  Object_SpaceSurroundingProperties_False.txt  Object_SpaceSurroundingProperties_False_PreferSingleLine_True.txt  Object_SpaceSurroundingProperties_True.txt
tests/specs/strings/: Strings_All.txt
