[package]
name = "dprint-plugin-json"
version = "0.21.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-json"
keywords = ["formatting", "formatter", "json", "jsonc"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-json"
description = "JSON formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
anyhow = "1.0.64"
dprint-core = { version = "0.67.4", features = ["formatting"] }
dprint-core-macros = "0.1.0"
jsonc-parser = { version = "0.28.0" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
text_lines = "0.6.0"

[dev-dependencies]
debug-here = "0.2"
dprint-development = "0.10.1"
serde_json = { version = "1.0" }
